fix formating on tablet for band heads and change mobile sizing for slideshow

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -124,8 +124,8 @@ a:hover {
 
 @media (max-width: 600px) {
     .carousel-inner img {
-        min-height: 50vh;
-        max-height: 50vh;
+        min-height: 40vh;
+        max-height: 40vh;
     }
 
     .carousel-caption {
